fix heading font-size on mobile devices

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -95,7 +95,7 @@ canvas {
 
 @media only screen and (max-width: 480px) {
   .heading {
-    font-size: 2.8em;
+    font-size: 2.5em;
   }
 
   .intro {
